fix add new line 12

--- a/sample/index.html
+++ b/sample/index.html
@@ -9,5 +9,6 @@
     <h1>VARGHESE BAY Poulose </h1>
     <h2> Testing </h2>
 <h3> this import line </h3>
+    <h4> test what happening conflit</h4>    
 </body>
 </html>
